# HorizonRev

./: .gitignore  Dockerfile.train  README.md  pyproject.toml  requirements-space.txt  requirements-train.txt  requirements.txt
.github/workflows/: main-ci.yml
apps/: hf_space_app.py
examples/: heuristic_rollout.py  monte_carlo_scenarios.py  random_rollout.py
notebooks/: HorizonRev_PPO_Train_End_to_End.ipynb  HorizonRev_TRL_Train.ipynb  HorizonRev_TRL_Train_Colab.ipynb
scripts/: train_mlp.py  train_ppo.py
src/horizonrev/: __init__.py  config.py  env.py  monte_carlo.py  rendering.py  reward.py  spaces.py
src/horizonrev/dynamics/: __init__.py  delayed.py  drift.py  experiments.py  transition.py
src/horizonrev/utils/: __init__.py  normalize.py  seeding.py
tests/: test_api_contract.py  test_cohort_and_monte_carlo.py  test_determinism.py  test_report_reward_modes.py  test_reward_nontrivial.py
