[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "horizonrev"
version = "0.1.0"
description = "Long-horizon revenue strategy RL environment with delayed churn and market drift."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "HorizonRev Contributors" }
]
dependencies = [
  "openenv-core==0.2.1",
  "numpy",
]
keywords = ["reinforcement-learning", "environment", "openenv", "revenue", "simulation"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest"]
space = ["gradio>=4.0.0", "matplotlib>=3.7.0"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
